# musicz-solana

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/aptos/: Cargo.toml
cli/src/: apt.rs  client.rs  error.rs  funcational.rs  main.rs  scan.rs  script_fun_demo.rs  sol.rs
client-go/: go.mod
evm/: Cargo.toml
evm/src/: main.rs
program/: Cargo.toml
program/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/tests/: functional.rs
src/: error.rs  funcational.rs  main.rs  script_fun_demo.rs  sol.rs
