[package]
name = "musicz-cli"
version = "0.1.0"
edition = "2021"


[workspace]
members = ["program"]

[workspace.dependencies]
serde = "1.0.163"
serde_json = "1.0.96"
solana-sdk = "1.14.18"
solana-client = "1.14.18"
tokio = "1.21.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.32"
log = "0.4.17"
simplelog = "0.12.0"
crossbeam = "0.8"
solana-sdk = {workspace=true}
solana-client = {workspace=true}
thiserror = "1.0.40"
tokio = {workspace=true}
once_cell = "1.13.0"
url = "2.2.2"
web3 = "0.18.0"
secp256k1 = "0.27.0"
fixed-hash = "0.8.0"
aptos-sdk = { path = "../aptos-core/sdk" }
aptos-types = { path = "../aptos-core/types" }
aptos-framework = { path = "../aptos-core/aptos-move/framework" }