[package]
name = "musicz-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.32"
log = "0.4.17"
simplelog = "0.12.0"
crossbeam = "0.8"
solana-sdk = "1.11.10"
solana-client = "1.11.10"
thiserror = "1.0.29"
tokio = "1.21.0"
once_cell = "1.13.0"
url = "2.2.2"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
framework = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
cached-packages = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
bcs = { git = "https://github.com/aptos-labs/bcs", rev = "2cde3e8446c460cb17b0c1d6bac7e27e964ac169" }