[package]
name = "musicz-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.32"
log = "0.4.17"
simplelog = "0.12.0"
crossbeam = "0.8"
solana-sdk = "1.11.10"
solana-client = "1.11.10"
thiserror = "1.0.29"
tokio = "1.21.0"
once_cell = "1.13.0"
url = "2.2.2"
aptos-sdk = { path = "../../aptos-core/sdk" }
aptos-types = { path = "../../aptos-core/types" }
aptos-framework = { path = "../../aptos-core/aptos-move/framework" }
