[package]
name = "evm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
log = "0.4.17"
simplelog = "0.12.0"
evm = "0.37.0"
tokio = { version = "1", features = ["full"] }
