[package]
name = "musicz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.10.20"
borsh = "0.10.0"

[dev-dependencies]
solana-program-test = "1.10.20"
solana-sdk = "1.10.20"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]