[package]
name = "musicz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.14.18"
borsh = "0.10.3"
spl-token-2022 = "0.6.1"

[dev-dependencies]
solana-program-test = "1.14.18"
solana-sdk = {workspace=true}
tokio={workspace=true}

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
